<resources>
    <string name="app_name">Ternak Management</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="body_weight_cattle">Body Weight</string>
    <string name="id_cattle">ID Cattle</string>
    <string name="spesies_cattle">Cattle\'s spesies</string>
    <string name="last_update_cattle">Last updateCount dd/mm/yyy</string>
    <string name="petik">:</string>
    <string name="cattle_id">Cattle ID</string>
    <string name="cattle_bw">Body Weight</string>
    <string name="cattle_bh">Body Height</string>
    <string name="cattle_bc">Body Circ</string>
    <string name="cattle_age">Age</string>
    <string name="cattle_duration">Days</string>
    <string name="cattle_color">Skin Color</string>
    <string name="vet_note">Health Note</string>
    <string name="UpdateBtn">Update</string>
    <string name="reportBtn">Report</string>
    <string name="vet_message">Message</string>
    <string name="vet_call">Call</string>
    <string name="vet_address">Address</string>
    <string name="vet_name">Name</string>
    <string name="add_photo">Add Photo</string>
    <string name="cattle_bw_unit">kg</string>
    <string name="cattle_bh_unit">cm</string>
    <string name="cattle_bc_unit">cm</string>
    <string name="cattle_age_unit">year</string>
    <string name="cattle_dur_unit">dayCount</string>
    <string name="farmerID">Farmer ID</string>
    <string name="farmer_name">Name</string>
    <string name="farmer_farm">Farm</string>
    <string name="farmer_phone">Phone</string>
    <string name="farmer_email">Email</string>
    <string name="farmer_cattles">Cattle\'s Number</string>
    <string name="login_btn">Login</string>
    <string name="signup_hint">Don\'t have account? click here to sign up</string>
    <string name="signup_phone_hint">phone number</string>
    <string name="signup_password_hint">your password</string>
    <string name="signup_email_hint">your email</string>
    <string name="signup_btn">Sign Up</string>
    <string name="login_hint">Already have an account? click here to sign in</string>
    <string name="signup_name_hint">your name</string>
    <string name="signup_re_password_hint">re-enter your password</string>
    <string name="logoutBtn">Log Out</string>
    <string name="signup_empty_text_warning">this section can not be empty!</string>
    <string name="auth_failed">Sign Up Failed!</string>
    <string name="auth_success">Signup success!</string>
    <string name="newCattleBtn">Add New</string>
    <string name="cattle_spec">Cattle Species</string>
    <string name="add_vet_note">Add Note</string>
    <string name="body_circ_cattle">Body Circumstance</string>
    <string name="body_height_cattle">Body Height</string>
    <string name="editBtn">Edit</string>
    <string name="saveBtn">save</string>
    <string name="vet_phone">phone</string>
</resources>
