<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:scrollbars="vertical"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_update"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                apps:layout_scrollFlags="scroll|enterAlways"
                android:titleTextColor="@color/textColorPrimary"
                apps:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_ternak_image_h">

                <ImageView
                    android:id="@+id/cattlePict_Up"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_ternak_image_h"
                    android:background="@color/grey"
                    android:src="@drawable/ic_add_sapi"/>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/add_picture"
                    android:background="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_fap"
                    apps:fabSize="normal"
                    android:layout_margin="5dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:scrollbars="vertical">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/margin_row">

                    <TextView
                        android:id="@+id/idCattle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/cattle_id"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/detail_primary_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/idCattle_txt_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textSize="@dimen/detail_primary_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/margin_row">

                    <TextView
                        android:id="@+id/bwCattle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/cattle_bw"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/detail_primary_text"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/bwCattle_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/cattle_bw"
                        android:textSize="@dimen/detail_primary_text"
                        android:inputType="number"/>

                    <TextView
                        android:id="@+id/bwCattle_unit_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/cattle_bw_unit"
                        android:textSize="@dimen/detail_primary_text" />
                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/margin_row">

                    <TextView
                        android:id="@+id/bhCattle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/cattle_bh"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/detail_primary_text"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/bhCattle_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/cattle_bh"
                        android:textSize="@dimen/detail_primary_text"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/bhCattle_unit_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/cattle_bh_unit"
                        android:textSize="@dimen/detail_primary_text" />

                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/margin_row">

                    <TextView
                        android:id="@+id/bcCattle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/cattle_bc"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/detail_primary_text"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/bcCattle_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/cattle_bc"
                        android:textSize="@dimen/detail_primary_text"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/bcCattle_unit_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/cattle_bc_unit"
                        android:textSize="@dimen/detail_primary_text" />

                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/margin_row">

                    <TextView
                        android:id="@+id/ageCattle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/cattle_age"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/detail_primary_text"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/ageCattle_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/cattle_age"
                        android:textSize="@dimen/detail_primary_text"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/ageCattle_unit_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/cattle_age_unit"
                        android:textSize="@dimen/detail_primary_text" />

                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/margin_row">

                    <TextView
                        android:id="@+id/colorCattle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/cattle_color"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/detail_primary_text"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/colorCattle_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/cattle_color"
                        android:textSize="@dimen/detail_primary_text" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/margin_row">

                    <TextView
                        android:id="@+id/healthCattle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/vet_note"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/detail_primary_text"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/healthCattle_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.5"
                        android:hint="@string/vet_note"
                        android:textSize="@dimen/detail_primary_text" />

                </TableRow>
            </TableLayout>
        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:id="@+id/layout_btn_bellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/updateDetail_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/UpdateBtn" />
    </LinearLayout>

    <include
        android:id="@+id/timerCattle"
        layout="@layout/timer_view" />
</RelativeLayout>